--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "tsc & node dist/index.js",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,9 @@
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "@types/node-telegram-bot-api": "^0.31.1",
+    "nodemon": "^1.19.3",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
   }
 }
