--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/tsc & node dist/index.js",
+    "start": "npm run tsc & node dist/index.js",
+    "tsc": "tsc",
     "dev": "nodemon"
   },
   "repository": {
