--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://github.com/neformen/smbr-football-bot#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "mongoose": "^5.7.5",
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/mongoose": "^5.5.21",
     "@types/node-telegram-bot-api": "^0.31.1",
     "nodemon": "^1.19.3",
