--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "postinstall": "npm run tsc",
+    "postinstall": "npm run tsc && npm run start",
     "tsc": "tsc",
     "dev": "nodemon"
   },
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/mongoose": "^5.7.21",
     "@types/node-telegram-bot-api": "^0.40.3",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.20",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3"
   }
