--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "postinstall": "npm run tsc && npm run start",
+    "postinstall": "npm run tsc",
     "tsc": "tsc",
     "dev": "nodemon"
   },
